done : login API

--- a/SECB/app/src/main/res/layout/login.xml
+++ b/SECB/app/src/main/res/layout/login.xml
@@ -45,7 +45,7 @@
         <include layout="@layout/password_input"/>
     </LinearLayout>
 
-    <!--forget pass-->
+    <!--forget loginXml-->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
