--- a/SECB/app/src/main/res/layout/news_details.xml
+++ b/SECB/app/src/main/res/layout/news_details.xml
@@ -4,70 +4,91 @@
     android:layout_height="match_parent"
     android:fillViewport="true">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
-        android:orientation="vertical"
-        android:padding="@dimen/news_details_padding">
-
-        <ImageView
-            android:id="@+id/imgv_news_details_img"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/news_details_img_height"
-            android:src="@drawable/news_img_sample" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/imgv_news_details_img"
-            android:background="#dd122d53"
-            android:gravity="center_vertical">
-
-            <TextView
-                android:id="@+id/txtv_news_details_newTitle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:maxLines="2"
-                android:lines="2"
-                android:ellipsize="end"
-                android:padding="@dimen/news_details_text_container_padding"
-                android:text="Saudi Arabia has greatly enhanced the development of exhibitions and conversation."
-                android:textColor="@color/secb_light_text"
-                android:textSize="@dimen/news_details_newTitle_text_size"
-                android:textStyle="bold" />
-
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/imgv_news_details_newDateContiner"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/imgv_news_details_img"
-            android:background="@color/light_grey"
-            android:gravity="center_vertical">
-
-            <TextView
-                android:id="@+id/txtv_news_details_newDate"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="@dimen/news_details_text_container_padding"
-                android:maxLines="1"
-                android:text="25 February 2015"
-                android:textColor="@color/secb_dark_text"
-                android:textSize="@dimen/news_details_newDate_text_size" />
-        </LinearLayout>
-
+        android:orientation="vertical">
 
         <TextView
-            android:id="@+id/txtv_news_details_newBody"
+            android:id="@+id/txtv_noData"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/imgv_news_details_newDateContiner"
-            android:layout_marginTop="@dimen/news_details_padding"
-            android:text="aaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
             android:textColor="@color/secb_dark_text"
-            android:textSize="@dimen/news_details_newBody_text_size" />
-    </RelativeLayout>
+            android:textSize="@dimen/gallery_item_text_size"
+            android:visibility="visible"
+            android:gravity="center"
+            android:text="@string/loading"/>
+
+        <RelativeLayout
+            android:id="@+id/layout_detailsContainer"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/white"
+            android:orientation="vertical"
+            android:padding="@dimen/news_details_padding"
+            android:visibility="gone">
+
+            <ImageView
+                android:id="@+id/imgv_news_details_img"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/news_details_img_height"
+                android:src="@drawable/news_image_place_holder" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/imgv_news_details_img"
+                android:background="#dd122d53"
+                android:gravity="center_vertical">
+
+                <TextView
+                    android:id="@+id/txtv_news_details_newTitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:maxLines="2"
+                    android:lines="2"
+                    android:ellipsize="end"
+                    android:padding="@dimen/news_details_text_container_padding"
+                    android:text=""
+                    android:textColor="@color/secb_light_text"
+                    android:textSize="@dimen/news_details_newTitle_text_size"
+                    android:textStyle="bold" />
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/imgv_news_details_newDateContiner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/imgv_news_details_img"
+                android:background="@color/light_grey"
+                android:gravity="center_vertical">
+
+                <TextView
+                    android:id="@+id/txtv_news_details_newDate"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/news_details_text_container_padding"
+                    android:maxLines="1"
+                    android:text=""
+                    android:textColor="@color/secb_dark_text"
+                    android:textSize="@dimen/news_details_newDate_text_size" />
+            </LinearLayout>
+
+
+            <TextView
+                android:id="@+id/txtv_news_details_newBody"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/imgv_news_details_newDateContiner"
+                android:layout_marginTop="@dimen/news_details_padding"
+                android:text=""
+                android:textColor="@color/secb_dark_text"
+                android:textSize="@dimen/news_details_newBody_text_size" />
+        </RelativeLayout>
+    </LinearLayout>
+
 </ScrollView>
