--- a/SECB/app/src/main/res/layout/news_filter_screen.xml
+++ b/SECB/app/src/main/res/layout/news_filter_screen.xml
@@ -16,10 +16,11 @@
 
     </LinearLayout>
 
-    <ScrollView
+    <!--ScrollView-->
+    <LinearLayout
         android:id="@+id/filter_container"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/news_list_recycler_heigth"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:background="@drawable/filter_bg"
         android:fillViewport="true">
@@ -117,11 +118,19 @@
                 android:orientation="vertical"
                 android:padding="@dimen/news_filter_padding">
 
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/newsCategoriesRecyclerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/news_filter_screen_recycler_height">
+
+                </android.support.v7.widget.RecyclerView>
+
                 <RadioGroup
                     android:id="@+id/radgro_newsTypes"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:visibility="gone">
 
                     <RadioButton
                         android:id="@+id/radbtn_allTypes"
@@ -184,7 +193,7 @@
 
 
         </LinearLayout>
-    </ScrollView>
+    </LinearLayout>
 
     <!--shadow_h-->
     <View
