1-grey placeholders instead of colored ones. 2-added space to the top of menu. 3-changing the custom loading dialog to the default . 4-resizing image to fit the title at the  news details , location details and organization details pages. 5- fix video list loading and news images loading .

--- a/SECB/app/src/main/res/layout-ar/menu_layout.xml
+++ b/SECB/app/src/main/res/layout-ar/menu_layout.xml
@@ -1,15 +1,16 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/menu_bg">
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingTop="@dimen/menu_item_vertical_margin"
+                android:background="@drawable/menu_bg">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/menuItemRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/menu_item_vertical_margin"
-        android:layout_marginBottom="@dimen/menu_item_vertical_margin">
+        android:layout_marginBottom="@dimen/menu_item_vertical_margin"
+        android:layout_marginTop="@dimen/menu_item_vertical_margin">
 
     </android.support.v7.widget.RecyclerView>
 
