--- a/SECB/app/src/main/res/layout/organizer_details.xml
+++ b/SECB/app/src/main/res/layout/organizer_details.xml
@@ -25,6 +25,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal|top"
             android:layout_weight="1"
+            android:scaleType="centerCrop"
             android:src="@drawable/news_img_sample" />
 
         <LinearLayout
