--- a/SECB/app/src/main/res/layout/custom_progress_dialog.xml
+++ b/SECB/app/src/main/res/layout/custom_progress_dialog.xml
@@ -1,16 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@null"
-    android:orientation="vertical">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:background="@color/black">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/imgv_loadingCircle"
+        android:visibility="visible"
+        >
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/loading"
+            android:gravity="center_horizontal"
+            android:textColor="@color/white"/>
+    </LinearLayout>
 
     <ImageView
         android:id="@+id/imgv_loadingCircle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:background="@drawable/loading_circle_white"
+        android:src="@drawable/loading_circle_white"
         />
 
 </RelativeLayout>
