done : - Youtube api test - Map Issues fixed

--- a/SECB/app/src/main/res/layout/event_details.xml
+++ b/SECB/app/src/main/res/layout/event_details.xml
@@ -65,9 +65,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center_horizontal"
-                android:visibility="gone"/>
+                android:visibility="visible"/>
 
-            <include layout="@layout/map_fragment"/>
+           <!-- <include layout="@layout/map_fragment"/>-->
 
         </LinearLayout>
     </RelativeLayout>
