--- a/SECB/app/src/main/res/layout/album_list_fragment.xml
+++ b/SECB/app/src/main/res/layout/album_list_fragment.xml
@@ -38,6 +38,8 @@
             android:layout_height="match_parent"
             android:layout_gravity="center"/>
     </FrameLayout>-->
+
+<!--for displaying images -->
     <LinearLayout
         android:id="@+id/layout_imagePlayerContainer"
         android:layout_width="match_parent"
@@ -60,6 +62,29 @@
             android:cropToPadding="true"/>
     </LinearLayout>
 
+<!--for displaying youtube video-->
+    <LinearLayout
+        android:id="@+id/layout_videoPlayerContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:background="#CC000000"
+        android:layout_marginTop="@dimen/home_graphs_card_padding"
+        android:layout_marginBottom="@dimen/home_graphs_card_padding"
+        android:layout_centerInParent="true"
+        android:clickable="true"
+        android:visibility="gone">
+
+        <FrameLayout
+            android:id="@+id/fragment_youtube_player"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
+
+    </LinearLayout>
+
+<!--Displayed when the list is empty-->
     <TextView
         android:id="@+id/txtv_noData"
         android:layout_width="match_parent"
