--- a/SECB/app/src/main/res/layout/location_list_fragment.xml
+++ b/SECB/app/src/main/res/layout/location_list_fragment.xml
@@ -1,17 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?><!--last news card-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/white"
-    android:paddingLeft="@dimen/eguide_base_padding"
-    android:paddingRight="@dimen/eguide_base_padding">
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="@color/white"
+              android:orientation="vertical"
+              android:paddingLeft="@dimen/eguide_base_padding"
+              android:paddingRight="@dimen/eguide_base_padding">
 
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/locationsRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+
+        android:visibility="gone">
 
     </android.support.v7.widget.RecyclerView>
+
+    <TextView
+        android:id="@+id/txtv_noData"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true"
+        android:gravity="center"
+        android:text="@string/loading"
+        android:textColor="@color/secb_dark_text"
+        android:textSize="@dimen/gallery_item_text_size"
+        android:visibility="visible"/>
 </LinearLayout>
