Done : -Organizers list , details , cities -E-services Requests list -all is cached

--- a/SECB/app/src/main/res/layout-ar/organizers_filter_screen.xml
+++ b/SECB/app/src/main/res/layout-ar/organizers_filter_screen.xml
@@ -79,18 +79,20 @@
             android:orientation="horizontal"
             android:paddingLeft="@dimen/news_filter_padding"
             android:paddingRight="@dimen/news_filter_padding">
+
             <!--city value-->
-            <EditText
-                android:id="@+id/txtv_city_filter_city_value"
+            <Spinner
+                android:id="@+id/spn_city_filter_city_value"
                 android:layout_width="0dp"
-                android:layout_weight="1"
-                android:maxLines="1"
-                android:text=""
                 android:layout_height="match_parent"
-                android:textColor="@color/secb_grey_text"
+                android:layout_weight="1"
                 android:gravity="center_vertical"
                 android:hint="@string/hint_city"
+                android:maxLines="1"
+                android:background="@color/white"
+                android:textColor="@color/secb_grey_text"
                 android:textSize="@dimen/news_filter_text_size" />
+
             <!--city title-->
             <TextView
                 android:id="@+id/txtv_city_filter_city_title"
