--- a/SECB/app/src/main/res/layout/e_services_list_fragment.xml
+++ b/SECB/app/src/main/res/layout/e_services_list_fragment.xml
@@ -20,10 +20,24 @@
         <include layout="@layout/graphs_layout"/>
     </LinearLayout>
 
+
+
+    <TextView
+        android:id="@+id/txtv_noData"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true"
+        android:textColor="@color/secb_dark_text"
+        android:textSize="@dimen/gallery_item_text_size"
+        android:visibility="visible"
+        android:gravity="center"
+        android:text="@string/loading"/>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/eServicesRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:visibility="gone"
         android:layout_marginBottom="@dimen/home_graphs_card_padding"
         ></android.support.v7.widget.RecyclerView>
 
