--- a/SECB/app/src/main/res/layout/organizer_details.xml
+++ b/SECB/app/src/main/res/layout/organizer_details.xml
@@ -22,7 +22,7 @@
         <ImageView
             android:id="@+id/imgv_organizerImg"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/news_details_img_height"
             android:layout_gravity="center_horizontal|top"
             android:layout_weight="1"
             android:scaleType="centerCrop"
