--- a/SECB/app/src/main/res/layout/organizers_list_fragment.xml
+++ b/SECB/app/src/main/res/layout/organizers_list_fragment.xml
@@ -10,8 +10,22 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/organizerRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+
+
+        android:visibility="gone">
 
     </android.support.v7.widget.RecyclerView>
+
+    <TextView
+        android:id="@+id/txtv_noData"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true"
+        android:gravity="center"
+        android:text="@string/loading"
+        android:textColor="@color/secb_dark_text"
+        android:textSize="@dimen/gallery_item_text_size"
+        android:visibility="visible"/>
 
 </LinearLayout>
